to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
23 October, 2014 A. Dotti (intercoms-V10-00-14)
- Add G4cout support for generic (non worker) threads via new method:
  G4UImanger::SetUpForSpecialThread(G4String prefix)
  Requires global-V10-00-38

8 October, 2014 M. Asai (intercoms-V10-00-12, -13)
- Adding a mechanism to make UI commands defined in a worker thread
to be registered to the G4UImanager of the master thread.

23 September, 2014 G. Cosmo (intercoms-V10-00-11)
- G4UImanager.hh : Renamed getThreadId() method to GetThreadId() and made
  post-const...

23 September, 2014 L. Garnier (intercoms-V10-00-10)
- G4UImanager.hh : Add getThreadId() method instead of a public member

23 September, 2014 L. Garnier (intercoms-V10-00-09)
- G4UImanager.hh : Change threadId from private to public

12 August, 2014 L. Garnier (intercoms-V10-00-08)
- G4UImanager.hh : add "G4MTcoutDestination* GetThreadCout()" 
  to get the cout destination of this thread

4 May, 2014 M. Asai (intercoms-V10-00-07)
- G4GenericMessenger.cc : Fix core dump when GetCurrentValue()
  method is invoked for a command defined by DeclareMethod().

4 May, 2014 M. Asai (intercoms-V10-00-06)
- Introducing new UI commands /control/doif and /control/getVal.

3 May, 2014 M. Asai (intercoms-V10-00-05)
- Fix the treatment of double-quotes in G4UImanager::ForeachS().
  Addressing bug report #1614.

16 April, 2014 G. Cosmo (intercoms-V10-00-04)
- Removed unnecessary source file G4AnyType.cc, as all symbols are inlined.
- Corrected inclusion protection flag in G4GenericMessenger.hh.
  Addressing old problem report #1527.

9 April, 2014 L. Garnier (intercoms-V10-00-03)